--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 body {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
   margin: 0;
   padding: 0;
+}
+
+.board {
+  border: 1px solid #000;
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
 }
